cleaned up code

--- a/cook-county-forfeitures/cook-county-forfeitures.ipynb
+++ b/cook-county-forfeitures/cook-county-forfeitures.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -30,15 +30,13 @@
     "# import libraries\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import xlrd\n",
     "import matplotlib.pyplot as plt\n",
-    "plt.style.use('ggplot')\n",
-    "from collections import defaultdict"
+    "plt.style.use('ggplot')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -60,22 +58,209 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Get some basic numbers from the dataset first"
+    "### Take a peek at the DataSet"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "23106\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>InventNumb</th>\n",
+       "      <th>PolRptNumb</th>\n",
+       "      <th>INumber</th>\n",
+       "      <th>SeizeDate</th>\n",
+       "      <th>SeizeAddress</th>\n",
+       "      <th>SeizeCity</th>\n",
+       "      <th>SeizeState</th>\n",
+       "      <th>SeizeZip</th>\n",
+       "      <th>InvItemNumb</th>\n",
+       "      <th>Descr</th>\n",
+       "      <th>EstValue</th>\n",
+       "      <th>Vin</th>\n",
+       "      <th>Findings</th>\n",
+       "      <th>ForfDate</th>\n",
+       "      <th>ForfValue</th>\n",
+       "      <th>CaseNumb</th>\n",
+       "      <th>AD</th>\n",
+       "      <th>ADDate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>12179595</td>\n",
+       "      <td>HX-273066</td>\n",
+       "      <td>HX-273066</td>\n",
+       "      <td>2014-05-23</td>\n",
+       "      <td>5847 S. Justine</td>\n",
+       "      <td>Chicago</td>\n",
+       "      <td>Il</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>U.S.C.</td>\n",
+       "      <td>205.0</td>\n",
+       "      <td>hy-419240</td>\n",
+       "      <td>ftot adm</td>\n",
+       "      <td>2014-08-25 00:00:00</td>\n",
+       "      <td>205.0</td>\n",
+       "      <td>14COFO-001771</td>\n",
+       "      <td>A</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>13408901</td>\n",
+       "      <td>HY-206119</td>\n",
+       "      <td>HY-206119</td>\n",
+       "      <td>2015-04-01</td>\n",
+       "      <td>3639 W. 62nd St</td>\n",
+       "      <td>Chicago</td>\n",
+       "      <td>Il</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>U.S.C.</td>\n",
+       "      <td>177500.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>15COFO-002504</td>\n",
+       "      <td>A</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>13647988</td>\n",
+       "      <td>HZ-192027</td>\n",
+       "      <td>HZ-192027</td>\n",
+       "      <td>2016-03-18</td>\n",
+       "      <td>6925 S. Paulina</td>\n",
+       "      <td>Chicago</td>\n",
+       "      <td>Il</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>U.S.C.</td>\n",
+       "      <td>96.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>16COFO-001033</td>\n",
+       "      <td>D</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>13689623</td>\n",
+       "      <td>HZ-271378</td>\n",
+       "      <td>HZ-271378</td>\n",
+       "      <td>2016-05-19</td>\n",
+       "      <td>855 N. Leclaire, 2nd fl</td>\n",
+       "      <td>Chicago</td>\n",
+       "      <td>Il</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>U.S.C.</td>\n",
+       "      <td>428.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>16COFO-001656</td>\n",
+       "      <td>D</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>13694503</td>\n",
+       "      <td>HZ-281003</td>\n",
+       "      <td>HZ-281003</td>\n",
+       "      <td>2016-05-26</td>\n",
+       "      <td>Confidential</td>\n",
+       "      <td>Chicago</td>\n",
+       "      <td>Il</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>U.S.C.</td>\n",
+       "      <td>2260.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>D</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  InventNumb PolRptNumb    INumber  SeizeDate             SeizeAddress  \\\n",
+       "0   12179595  HX-273066  HX-273066 2014-05-23          5847 S. Justine   \n",
+       "1   13408901  HY-206119  HY-206119 2015-04-01          3639 W. 62nd St   \n",
+       "2   13647988  HZ-192027  HZ-192027 2016-03-18          6925 S. Paulina   \n",
+       "3   13689623  HZ-271378  HZ-271378 2016-05-19  855 N. Leclaire, 2nd fl   \n",
+       "4   13694503  HZ-281003  HZ-281003 2016-05-26             Confidential   \n",
+       "\n",
+       "  SeizeCity SeizeState  SeizeZip  InvItemNumb   Descr  EstValue        Vin  \\\n",
+       "0   Chicago         Il       NaN            1  U.S.C.     205.0  hy-419240   \n",
+       "1   Chicago         Il       NaN            1  U.S.C.  177500.0        NaN   \n",
+       "2   Chicago         Il       NaN            1  U.S.C.      96.0        NaN   \n",
+       "3   Chicago         Il       NaN            1  U.S.C.     428.0        NaN   \n",
+       "4   Chicago         Il       NaN            1  U.S.C.    2260.0        NaN   \n",
+       "\n",
+       "   Findings             ForfDate  ForfValue       CaseNumb AD  ADDate  \n",
+       "0  ftot adm  2014-08-25 00:00:00      205.0  14COFO-001771  A     NaN  \n",
+       "1       NaN                  NaN        NaN  15COFO-002504  A     NaN  \n",
+       "2       NaN                  NaN        NaN  16COFO-001033  D     NaN  \n",
+       "3       NaN                  NaN        NaN  16COFO-001656  D     NaN  \n",
+       "4       NaN                  NaN        NaN            NaN  D     NaN  "
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "forfeitures.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Get some basic stats from the DataSet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "23106"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -85,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -96,7 +281,7 @@
        "1049.0"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -116,10 +301,10 @@
     {
      "data": {
       "text/plain": [
-       "4553.416355517019"
+       "4553.416355517011"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -143,7 +328,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -163,10 +348,10 @@
     {
      "data": {
       "text/plain": [
-       "105024548.24000004"
+       "105024548.23999986"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -189,7 +374,7 @@
        "47318608.921000004"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -212,7 +397,7 @@
        "12767"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -235,7 +420,7 @@
        "5939"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -261,7 +446,7 @@
        "Name: AD, dtype: int64"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -291,7 +476,7 @@
        "11031"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -318,7 +503,7 @@
        "6154"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -345,7 +530,7 @@
        "1497"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -389,7 +574,7 @@
        "Name: EstValue, dtype: int64"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -414,25 +599,25 @@
        "2006 Chevrolet Impala         23\n",
        "2004 Chevrolet Impala         22\n",
        "USC                           22\n",
-       "2001 Buick Century            19\n",
        "2002 Ford Explorer            19\n",
-       "2000 Chevrolet Impala         17\n",
+       "2001 Buick Century            19\n",
        "2008 Chevrolet Impala         17\n",
-       "2002 Chevrolet Impala         16\n",
-       "1999 Buick Century            16\n",
+       "2000 Chevrolet Impala         17\n",
        "2003 Ford Explorer            16\n",
+       "1999 Buick Century            16\n",
        "2007 Chevrolet Impala         16\n",
+       "2002 Chevrolet Impala         16\n",
        "2011 Chevrolet Malibu         16\n",
        "2001 Pontiac Grand Prix       15\n",
        "2003 Ford Taurus              15\n",
        "2001 Ford Taurus              14\n",
-       "2000 Ford Taurus              14\n",
-       "2005 Chevrolet Impala         14\n",
        "2003 Chevrolet Impala         14\n",
+       "2005 Chevrolet Impala         14\n",
+       "2000 Ford Taurus              14\n",
        "Name: Descr, dtype: int64"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -482,7 +667,7 @@
        "Name: SeizeCity, dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -640,7 +825,7 @@
        "125             Lansing    443966.03"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -661,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -677,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
