condensed for loops

--- a/cook-county-forfeitures/cook-county-forfeitures.ipynb
+++ b/cook-county-forfeitures/cook-county-forfeitures.ipynb
@@ -465,83 +465,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "11031"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Seizures under $1000 = 11031\n",
+      "Seizures under $500 = 6154\n",
+      "Seizures under $100 = 1497\n"
+     ]
     }
    ],
    "source": [
-    "# sort and count number of seizures below $1,000\n",
-    "bottom = []\n",
+    "# sort and count number of seizures below $1000, $500, and $100\n",
+    "under_one_thous = []\n",
+    "under_five_hundo = []\n",
+    "under_one_hundo = []\n",
+    "\n",
     "for value in estvalues:\n",
     "    if value < 1000:\n",
-    "        bottom.append(value)\n",
-    "len(bottom)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "6154"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# sort and count number of seizures below $500\n",
-    "under_five_hundo = []\n",
-    "for value in estvalues:\n",
+    "        under_one_thous.append(value)\n",
     "    if value < 500:\n",
     "        under_five_hundo.append(value)\n",
-    "len(under_five_hundo)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1497"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# sort and count number of seizures below $100\n",
-    "lowest = []\n",
-    "for value in estvalues:\n",
     "    if value < 100:\n",
-    "        lowest.append(value)\n",
-    "len(lowest)"
+    "        under_one_hundo.append(value)\n",
+    "\n",
+    "print(\"Seizures under $1000 = \" + str(len(under_one_thous)) + \"\\n\"\n",
+    "      + \"Seizures under $500 = \" + str(len(under_five_hundo)) + \"\\n\"\n",
+    "      + \"Seizures under $100 = \" + str(len(under_one_hundo)))"
    ]
   },
   {
