--- a/cook-county-forfeitures/cook-county-forfeitures.ipynb
+++ b/cook-county-forfeitures/cook-county-forfeitures.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "By CJ Ciaramella\n",
     "\n",
-    "*Reason Magazine* conducted an analysis of five years of asset forfeiture data from the Cook County State's Attorney's Office, collected via a Freedom of Information request by [Lucy Parsons Labs](https://github.com/lucyparsons/1505-documents/tree/master/CCSAO). The results [were reported](http://reason.com/blog/2017/06/13/poor-neighborhoods-hit-hardest-by-asset) on June 13, 2017. Here are some of the findings of the analysis, documented below:\n",
+    "*Reason Magazine* conducted an analysis of [five years of asset forfeiture data](https://github.com/lucyparsons/1505-documents/tree/master/CCSAO) from the Cook County State's Attorney's Office, collected via a Freedom of Information request by Lucy Parsons Labs. The results [were reported](http://reason.com/blog/2017/06/13/poor-neighborhoods-hit-hardest-by-asset) on June 13, 2017. Here are some of the findings of the analysis, documented below:\n",
     "\n",
     "- There were roughly 23,0000 asset seizures, with a total estimated value of $105 million, by law enforcement in Cook County between 2012 and 2017.\n",
     "\n",
