--- a/cook-county-forfeitures/cook-county-forfeitures.ipynb
+++ b/cook-county-forfeitures/cook-county-forfeitures.ipynb
@@ -60,7 +60,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Take a peek at the DataSet"
+    "### Take a peek at the DataFrame"
    ]
   },
   {
@@ -244,7 +244,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Get some basic stats from the DataSet"
+    "### Get some basic stats from the DataFrame"
    ]
   },
   {
